[gd_scene load_steps=30 format=3 uid="uid://b3go2r76t8gd4"]

[ext_resource type="Script" path="res://addons/cyclops_level_builder/nodes/cyclops_blocks.gd" id="1_gtd6s"]
[ext_resource type="Script" path="res://addons/cyclops_level_builder/nodes/cyclops_convex_block.gd" id="2_x2g8i"]
[ext_resource type="Script" path="res://addons/cyclops_level_builder/resources/convex_block_data.gd" id="3_6gi3q"]
[ext_resource type="Material" uid="uid://bx400mwnatiou" path="res://materials/placeholder1.tres" id="3_rn2a8"]
[ext_resource type="Material" uid="uid://bvxrd5ruon2d0" path="res://materials/placeholder2.tres" id="5_0mtmy"]
[ext_resource type="PackedScene" uid="uid://dw48lied41318" path="res://playercontroller.tscn" id="5_gchtp"]
[ext_resource type="Material" uid="uid://nqt0uqlpr03x" path="res://materials/placeholder3.tres" id="6_5600o"]
[ext_resource type="Material" uid="uid://babdo6d0fb1vl" path="res://materials/placeholder4.tres" id="7_xkrlc"]
[ext_resource type="Material" uid="uid://dwyqesykvhx2l" path="res://materials/placeholder5.tres" id="8_1yad1"]
[ext_resource type="Material" uid="uid://dfhsktefivanp" path="res://materials/placeholder6.tres" id="9_jhv0m"]
[ext_resource type="PackedScene" uid="uid://cuaj0gkhbg52t" path="res://enemy.tscn" id="10_pb7qb"]
[ext_resource type="PackedScene" uid="uid://dej1l8ydm5vkd" path="res://page.tscn" id="12_h6bg8"]
[ext_resource type="Script" path="res://debug_hud.gd" id="13_rpebn"]
[ext_resource type="Script" path="res://pausemenu.gd" id="14_6hlg6"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_yw7yy"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_rkmew"]
sky_material = SubResource("ProceduralSkyMaterial_yw7yy")

[sub_resource type="Environment" id="Environment_lrmj0"]
background_mode = 2
sky = SubResource("Sky_rkmew")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="Resource" id="Resource_0fk13"]
script = ExtResource("3_6gi3q")
selected = false
active = false
collsion = true
vertex_points = PackedVector3Array(-28, 0, 35, 45, 0, 35, 45, -1, 35, -28, -1, 35, 45, -1, -40, 45, 0, -40, -28, -1, -40, -28, 0, -40)
vertex_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0)
active_vertex = -1
edge_vertex_indices = PackedInt32Array(0, 1, 1, 2, 2, 3, 3, 0, 4, 2, 1, 5, 5, 4, 4, 6, 6, 3, 5, 7, 7, 6, 7, 0)
edge_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
active_edge = -1
edge_face_indices = PackedInt32Array(0, 5, 0, 1, 0, 2, 0, 4, 1, 2, 1, 5, 1, 3, 2, 3, 2, 4, 3, 5, 3, 4, 4, 5)
face_vertex_count = PackedInt32Array(4, 4, 4, 4, 4, 4)
face_vertex_indices = PackedInt32Array(0, 1, 2, 3, 4, 2, 1, 5, 4, 6, 3, 2, 4, 5, 7, 6, 0, 3, 6, 7, 0, 7, 5, 1)
face_material_indices = PackedInt32Array(0, 0, 0, 0, 0, 0)
face_uv_transform = Array[Transform2D]([Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0)])
face_selected = PackedByteArray(0, 0, 0, 0, 0, 0)
active_face = -1
face_ids = PackedInt32Array(0, 1, 2, 3, 4, 5)

[sub_resource type="Resource" id="Resource_e373b"]
script = ExtResource("3_6gi3q")
selected = false
active = false
collsion = true
vertex_points = PackedVector3Array(-18, 2, 0, -18, 0, 3, -18, 0, -7, -18, 2, -4, -15, 2, -4, -15, 2, 0, -15, 0, 3, -15, 0, -4, -15, 0, -7)
vertex_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0)
active_vertex = -1
edge_vertex_indices = PackedInt32Array(0, 1, 1, 2, 2, 3, 3, 0, 3, 4, 4, 5, 5, 0, 6, 7, 7, 8, 8, 2, 1, 6, 6, 5, 4, 8)
edge_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
active_edge = -1
edge_face_indices = PackedInt32Array(0, 5, 0, 2, 0, 4, 0, 1, 1, 4, 1, 3, 1, 5, 2, 3, 2, 3, 2, 4, 2, 5, 3, 5, 3, 4)
face_vertex_count = PackedInt32Array(4, 4, 5, 5, 4, 4)
face_vertex_indices = PackedInt32Array(0, 1, 2, 3, 0, 3, 4, 5, 6, 7, 8, 2, 1, 8, 7, 6, 5, 4, 2, 8, 4, 3, 6, 1, 0, 5)
face_material_indices = PackedInt32Array(0, 0, 0, 0, 0, 0)
face_uv_transform = Array[Transform2D]([Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0)])
face_selected = PackedByteArray(0, 0, 0, 0, 0, 0)
active_face = -1
face_ids = PackedInt32Array(0, 1, 2, 3, 4, 5)

[sub_resource type="Resource" id="Resource_p6bln"]
script = ExtResource("3_6gi3q")
selected = false
active = false
collsion = true
vertex_points = PackedVector3Array(13, 1, -2, 13, 1, 2, 13, 0, 2, 13, 0, -2, 18, 1, -2, 18, 1, 2, 18, 0, 2, 18, 0, -2)
vertex_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0)
active_vertex = -1
edge_vertex_indices = PackedInt32Array(0, 1, 1, 2, 2, 3, 3, 0, 7, 6, 6, 5, 5, 4, 4, 7, 0, 4, 5, 1, 6, 2, 7, 3)
edge_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
active_edge = -1
edge_face_indices = PackedInt32Array(0, 2, 0, 3, 0, 4, 0, 5, 1, 4, 1, 3, 1, 2, 1, 5, 2, 5, 2, 3, 3, 4, 4, 5)
face_vertex_count = PackedInt32Array(4, 4, 4, 4, 4, 4)
face_vertex_indices = PackedInt32Array(0, 1, 2, 3, 7, 6, 5, 4, 1, 0, 4, 5, 2, 1, 5, 6, 3, 2, 6, 7, 0, 3, 7, 4)
face_material_indices = PackedInt32Array(0, 0, 0, 0, 0, 0)
face_uv_transform = Array[Transform2D]([Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0)])
face_selected = PackedByteArray(0, 0, 0, 0, 0, 0)
active_face = -1
face_ids = PackedInt32Array(0, 1, 2, 3, 4, 5)

[sub_resource type="Resource" id="Resource_s3j13"]
script = ExtResource("3_6gi3q")
selected = false
active = false
collsion = true
vertex_points = PackedVector3Array(11, 2, -8, 11, 2, -3, 11, 0, -3, 11, 0, -8, 20, 2, -8, 20, 2, -3, 20, 0, -3, 20, 0, -8)
vertex_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0)
active_vertex = -1
edge_vertex_indices = PackedInt32Array(0, 1, 1, 2, 2, 3, 3, 0, 7, 6, 6, 5, 5, 4, 4, 7, 0, 4, 5, 1, 6, 2, 7, 3)
edge_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
active_edge = -1
edge_face_indices = PackedInt32Array(0, 2, 0, 3, 0, 4, 0, 5, 1, 4, 1, 3, 1, 2, 1, 5, 2, 5, 2, 3, 3, 4, 4, 5)
face_vertex_count = PackedInt32Array(4, 4, 4, 4, 4, 4)
face_vertex_indices = PackedInt32Array(0, 1, 2, 3, 7, 6, 5, 4, 1, 0, 4, 5, 2, 1, 5, 6, 3, 2, 6, 7, 0, 3, 7, 4)
face_material_indices = PackedInt32Array(0, 0, 0, 0, 0, 0)
face_uv_transform = Array[Transform2D]([Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0)])
face_selected = PackedByteArray(0, 0, 0, 0, 0, 0)
active_face = -1
face_ids = PackedInt32Array(0, 1, 2, 3, 4, 5)

[sub_resource type="Resource" id="Resource_c7730"]
script = ExtResource("3_6gi3q")
selected = false
active = false
collsion = true
vertex_points = PackedVector3Array(9, 3, -15, 9, 3, -9, 9, 0, -9, 9, 0, -15, 22, 3, -15, 22, 3, -9, 22, 0, -9, 22, 0, -15)
vertex_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0)
active_vertex = -1
edge_vertex_indices = PackedInt32Array(0, 1, 1, 2, 2, 3, 3, 0, 7, 6, 6, 5, 5, 4, 4, 7, 0, 4, 5, 1, 6, 2, 7, 3)
edge_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
active_edge = -1
edge_face_indices = PackedInt32Array(0, 2, 0, 3, 0, 4, 0, 5, 1, 4, 1, 3, 1, 2, 1, 5, 2, 5, 2, 3, 3, 4, 4, 5)
face_vertex_count = PackedInt32Array(4, 4, 4, 4, 4, 4)
face_vertex_indices = PackedInt32Array(0, 1, 2, 3, 7, 6, 5, 4, 1, 0, 4, 5, 2, 1, 5, 6, 3, 2, 6, 7, 0, 3, 7, 4)
face_material_indices = PackedInt32Array(0, 0, 0, 0, 0, 0)
face_uv_transform = Array[Transform2D]([Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0)])
face_selected = PackedByteArray(0, 0, 0, 0, 0, 0)
active_face = -1
face_ids = PackedInt32Array(0, 1, 2, 3, 4, 5)

[sub_resource type="Resource" id="Resource_drc8o"]
script = ExtResource("3_6gi3q")
selected = false
active = false
collsion = true
vertex_points = PackedVector3Array(45, 7, -40, 44, 7, -40, 44, 0, -40, 45, 0, -40, 45, 0, 35, 44, 0, 35, 44, 7, 35, 45, 7, 35)
vertex_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0)
active_vertex = -1
edge_vertex_indices = PackedInt32Array(0, 1, 1, 2, 2, 3, 3, 0, 4, 3, 2, 5, 5, 4, 6, 5, 1, 6, 4, 7, 7, 0, 6, 7)
edge_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
active_edge = -1
edge_face_indices = PackedInt32Array(0, 5, 0, 2, 0, 1, 0, 3, 1, 3, 1, 2, 1, 4, 2, 4, 2, 5, 3, 4, 3, 5, 4, 5)
face_vertex_count = PackedInt32Array(4, 4, 4, 4, 4, 4)
face_vertex_indices = PackedInt32Array(0, 1, 2, 3, 4, 3, 2, 5, 6, 5, 2, 1, 0, 3, 4, 7, 6, 7, 4, 5, 6, 1, 0, 7)
face_material_indices = PackedInt32Array(0, 0, 0, 0, 0, 0)
face_uv_transform = Array[Transform2D]([Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0)])
face_selected = PackedByteArray(0, 0, 0, 0, 0, 0)
active_face = -1
face_ids = PackedInt32Array(0, 1, 2, 3, 4, 5)

[sub_resource type="Resource" id="Resource_ghj0e"]
script = ExtResource("3_6gi3q")
selected = false
active = false
collsion = true
vertex_points = PackedVector3Array(-27, 7, -39, -27, 7, -40, 44, 7, -40, 44, 7, -39, 44, 0, -39, -27, 0, -39, -27, 0, -40, 44, 0, -40)
vertex_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0)
active_vertex = -1
edge_vertex_indices = PackedInt32Array(0, 1, 1, 2, 2, 3, 3, 0, 4, 5, 5, 0, 3, 4, 6, 1, 5, 6, 6, 7, 7, 2, 7, 4)
edge_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
active_edge = -1
edge_face_indices = PackedInt32Array(0, 2, 0, 3, 0, 4, 0, 1, 1, 5, 1, 2, 1, 4, 2, 3, 2, 5, 3, 5, 3, 4, 4, 5)
face_vertex_count = PackedInt32Array(4, 4, 4, 4, 4, 4)
face_vertex_indices = PackedInt32Array(0, 1, 2, 3, 4, 5, 0, 3, 6, 1, 0, 5, 6, 7, 2, 1, 4, 3, 2, 7, 6, 5, 4, 7)
face_material_indices = PackedInt32Array(0, 0, 0, 0, 0, 0)
face_uv_transform = Array[Transform2D]([Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0)])
face_selected = PackedByteArray(0, 0, 0, 0, 0, 0)
active_face = -1
face_ids = PackedInt32Array(0, 1, 2, 3, 4, 5)

[sub_resource type="Resource" id="Resource_4sldc"]
script = ExtResource("3_6gi3q")
selected = false
active = false
collsion = true
vertex_points = PackedVector3Array(-27, 7, 35, -27, 7, 34, 44, 7, 34, 44, 7, 35, 44, 0, 35, -27, 0, 35, -27, 0, 34, 44, 0, 34)
vertex_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0)
active_vertex = -1
edge_vertex_indices = PackedInt32Array(0, 1, 1, 2, 2, 3, 3, 0, 4, 5, 5, 0, 3, 4, 6, 1, 5, 6, 6, 7, 7, 2, 7, 4)
edge_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
active_edge = -1
edge_face_indices = PackedInt32Array(0, 2, 0, 3, 0, 4, 0, 1, 1, 5, 1, 2, 1, 4, 2, 3, 2, 5, 3, 5, 3, 4, 4, 5)
face_vertex_count = PackedInt32Array(4, 4, 4, 4, 4, 4)
face_vertex_indices = PackedInt32Array(0, 1, 2, 3, 4, 5, 0, 3, 6, 1, 0, 5, 6, 7, 2, 1, 4, 3, 2, 7, 6, 5, 4, 7)
face_material_indices = PackedInt32Array(0, 0, 0, 0, 0, 0)
face_uv_transform = Array[Transform2D]([Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0)])
face_selected = PackedByteArray(0, 0, 0, 0, 0, 0)
active_face = -1
face_ids = PackedInt32Array(0, 1, 2, 3, 4, 5)

[sub_resource type="Resource" id="Resource_cjlvq"]
script = ExtResource("3_6gi3q")
selected = false
active = false
collsion = true
vertex_points = PackedVector3Array(-27, 7, -40, -28, 7, -40, -28, 0, -40, -27, 0, -40, -27, 0, 35, -28, 0, 35, -28, 7, 35, -27, 7, 35)
vertex_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0)
active_vertex = -1
edge_vertex_indices = PackedInt32Array(0, 1, 1, 2, 2, 3, 3, 0, 4, 3, 2, 5, 5, 4, 6, 5, 1, 6, 4, 7, 7, 0, 6, 7)
edge_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
active_edge = -1
edge_face_indices = PackedInt32Array(0, 5, 0, 2, 0, 1, 0, 3, 1, 3, 1, 2, 1, 4, 2, 4, 2, 5, 3, 4, 3, 5, 4, 5)
face_vertex_count = PackedInt32Array(4, 4, 4, 4, 4, 4)
face_vertex_indices = PackedInt32Array(0, 1, 2, 3, 4, 3, 2, 5, 6, 5, 2, 1, 0, 3, 4, 7, 6, 7, 4, 5, 6, 1, 0, 7)
face_material_indices = PackedInt32Array(0, 0, 0, 0, 0, 0)
face_uv_transform = Array[Transform2D]([Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0)])
face_selected = PackedByteArray(0, 0, 0, 0, 0, 0)
active_face = -1
face_ids = PackedInt32Array(0, 1, 2, 3, 4, 5)

[sub_resource type="Resource" id="Resource_favff"]
script = ExtResource("3_6gi3q")
selected = false
active = false
collsion = true
vertex_points = PackedVector3Array(-18, 5, -25, -18, 5, -16, -18, 0, -16, -18, 0, -25, -17, 5, -25, -17, 5, -16, -17, 0, -16, -17, 0, -25)
vertex_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0)
active_vertex = -1
edge_vertex_indices = PackedInt32Array(0, 1, 1, 2, 2, 3, 3, 0, 7, 6, 6, 5, 5, 4, 4, 7, 0, 4, 5, 1, 6, 2, 7, 3)
edge_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
active_edge = -1
edge_face_indices = PackedInt32Array(0, 2, 0, 3, 0, 4, 0, 5, 1, 4, 1, 3, 1, 2, 1, 5, 2, 5, 2, 3, 3, 4, 4, 5)
face_vertex_count = PackedInt32Array(4, 4, 4, 4, 4, 4)
face_vertex_indices = PackedInt32Array(0, 1, 2, 3, 7, 6, 5, 4, 1, 0, 4, 5, 2, 1, 5, 6, 3, 2, 6, 7, 0, 3, 7, 4)
face_material_indices = PackedInt32Array(0, 0, 0, 0, 0, 0)
face_uv_transform = Array[Transform2D]([Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0)])
face_selected = PackedByteArray(0, 0, 0, 0, 0, 0)
active_face = -1
face_ids = PackedInt32Array(0, 1, 2, 3, 4, 5)

[sub_resource type="LabelSettings" id="LabelSettings_ivd1y"]

[sub_resource type="LabelSettings" id="LabelSettings_ra8mv"]
font_size = 32

[node name="World" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 9.55458, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_lrmj0")

[node name="CyclopsBlocks" type="Node3D" parent="."]
script = ExtResource("1_gtd6s")

[node name="Block_0" type="Node" parent="CyclopsBlocks"]
script = ExtResource("2_x2g8i")
materials = Array[Material]([ExtResource("3_rn2a8")])
block_data = SubResource("Resource_0fk13")

[node name="Block_4" type="Node" parent="CyclopsBlocks"]
script = ExtResource("2_x2g8i")
materials = Array[Material]([ExtResource("5_0mtmy")])
block_data = SubResource("Resource_e373b")

[node name="Block_1" type="Node" parent="CyclopsBlocks"]
script = ExtResource("2_x2g8i")
materials = Array[Material]([ExtResource("6_5600o")])
block_data = SubResource("Resource_p6bln")

[node name="Block_2" type="Node" parent="CyclopsBlocks"]
script = ExtResource("2_x2g8i")
materials = Array[Material]([ExtResource("7_xkrlc")])
block_data = SubResource("Resource_s3j13")

[node name="Block_3" type="Node" parent="CyclopsBlocks"]
script = ExtResource("2_x2g8i")
materials = Array[Material]([ExtResource("8_1yad1")])
block_data = SubResource("Resource_c7730")

[node name="Block_6" type="Node" parent="CyclopsBlocks"]
script = ExtResource("2_x2g8i")
materials = Array[Material]([ExtResource("3_rn2a8")])
block_data = SubResource("Resource_drc8o")

[node name="Block_7" type="Node" parent="CyclopsBlocks"]
script = ExtResource("2_x2g8i")
materials = Array[Material]([ExtResource("3_rn2a8")])
block_data = SubResource("Resource_ghj0e")

[node name="Block_8" type="Node" parent="CyclopsBlocks"]
script = ExtResource("2_x2g8i")
materials = Array[Material]([ExtResource("3_rn2a8")])
block_data = SubResource("Resource_4sldc")

[node name="Block_5" type="Node" parent="CyclopsBlocks"]
script = ExtResource("2_x2g8i")
materials = Array[Material]([ExtResource("3_rn2a8")])
block_data = SubResource("Resource_cjlvq")

[node name="Block_9" type="Node" parent="CyclopsBlocks"]
script = ExtResource("2_x2g8i")
materials = Array[Material]([ExtResource("9_jhv0m")])
block_data = SubResource("Resource_favff")

[node name="Enemy" parent="." instance=ExtResource("10_pb7qb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 34.0677, 1.00001, 28.7642)

[node name="Playercontroller" parent="." node_paths=PackedStringArray("enemy") instance=ExtResource("5_gchtp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0187473, 1, -0.0150486)
enemy = NodePath("../Enemy")

[node name="Pages" type="Node3D" parent="."]

[node name="Page" parent="Pages" node_paths=PackedStringArray("playercontroller") instance=ExtResource("12_h6bg8")]
transform = Transform3D(0.0251831, 0, 0, 0, 0.568065, 0, 0, 0, 0.356293, -16.989, 1.12048, -16.7735)
playercontroller = NodePath("../../Playercontroller")

[node name="Page2" parent="Pages" node_paths=PackedStringArray("playercontroller") instance=ExtResource("12_h6bg8")]
transform = Transform3D(0.0251831, 0, 0, 0, 0.568065, 0, 0, 0, 0.356293, -16.989, 2.21432, -18.0333)
playercontroller = NodePath("../../Playercontroller")

[node name="Page3" parent="Pages" node_paths=PackedStringArray("playercontroller") instance=ExtResource("12_h6bg8")]
transform = Transform3D(0.0251831, 0, 0, 0, 0.568065, 0, 0, 0, 0.356293, -16.989, 0.620853, -18.948)
playercontroller = NodePath("../../Playercontroller")

[node name="Page4" parent="Pages" node_paths=PackedStringArray("playercontroller") instance=ExtResource("12_h6bg8")]
transform = Transform3D(0.0251831, 0, 0, 0, 0.568065, 0, 0, 0, 0.356293, -16.989, 1.32954, -19.8966)
playercontroller = NodePath("../../Playercontroller")

[node name="Page5" parent="Pages" node_paths=PackedStringArray("playercontroller") instance=ExtResource("12_h6bg8")]
transform = Transform3D(0.0251831, 0, 0, 0, 0.568065, 0, 0, 0, 0.356293, -16.989, 2.07613, -20.9978)
playercontroller = NodePath("../../Playercontroller")

[node name="Page6" parent="Pages" node_paths=PackedStringArray("playercontroller") instance=ExtResource("12_h6bg8")]
transform = Transform3D(0.0251831, 0, 0, 0, 0.568065, 0, 0, 0, 0.356293, -16.989, 0.924573, -22.0677)
playercontroller = NodePath("../../Playercontroller")

[node name="Page7" parent="Pages" node_paths=PackedStringArray("playercontroller") instance=ExtResource("12_h6bg8")]
transform = Transform3D(0.0251831, 0, 0, 0, 0.568065, 0, 0, 0, 0.356293, -16.989, 1.52569, -23.2777)
playercontroller = NodePath("../../Playercontroller")

[node name="Page8" parent="Pages" node_paths=PackedStringArray("playercontroller") instance=ExtResource("12_h6bg8")]
transform = Transform3D(0.0251831, 0, 0, 0, 0.568065, 0, 0, 0, 0.356293, -16.989, 2.16042, -24.2179)
playercontroller = NodePath("../../Playercontroller")

[node name="DebugHUD" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("13_rpebn")

[node name="VBoxContainer" type="VBoxContainer" parent="DebugHUD"]
layout_mode = 0
offset_left = 53.0
offset_top = 68.0
offset_right = 445.0
offset_bottom = 309.0

[node name="Label" type="Label" parent="DebugHUD/VBoxContainer"]
layout_mode = 2
text = "Slender data"
label_settings = SubResource("LabelSettings_ivd1y")

[node name="Active_state" type="Label" parent="DebugHUD/VBoxContainer"]
layout_mode = 2
text = "Active:"
label_settings = SubResource("LabelSettings_ivd1y")

[node name="Enemyposition" type="Label" parent="DebugHUD/VBoxContainer"]
layout_mode = 2
text = "Position: (x, y, z)"
label_settings = SubResource("LabelSettings_ivd1y")

[node name="Timer_total" type="Label" parent="DebugHUD/VBoxContainer"]
layout_mode = 2
text = "Current teleport timer delay:"
label_settings = SubResource("LabelSettings_ivd1y")

[node name="Timer_counter" type="Label" parent="DebugHUD/VBoxContainer"]
layout_mode = 2
text = "Current timer teleport counter:"
label_settings = SubResource("LabelSettings_ivd1y")

[node name="Label2" type="Label" parent="DebugHUD/VBoxContainer"]
layout_mode = 2
text = "Player data"
label_settings = SubResource("LabelSettings_ivd1y")

[node name="FPS_counter" type="Label" parent="DebugHUD/VBoxContainer"]
layout_mode = 2
text = "FPS: 0"
label_settings = SubResource("LabelSettings_ivd1y")

[node name="Pages_count" type="Label" parent="DebugHUD/VBoxContainer"]
layout_mode = 2
text = "Pages: 0"
label_settings = SubResource("LabelSettings_ivd1y")

[node name="tvstatic_opacity" type="Label" parent="DebugHUD/VBoxContainer"]
layout_mode = 2
text = "Static opacity: 0.0"
label_settings = SubResource("LabelSettings_ivd1y")

[node name="Pause_menu" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("14_6hlg6")

[node name="Background" type="ColorRect" parent="Pause_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.568627)

[node name="Pause_text" type="Label" parent="Pause_menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.5
offset_top = 100.0
offset_right = 28.5
offset_bottom = 126.0
grow_horizontal = 2
text = "Paused"
label_settings = SubResource("LabelSettings_ra8mv")

[node name="Buttons" type="VBoxContainer" parent="Pause_menu"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.5
offset_top = -55.0
offset_right = 109.5
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Return" type="Button" parent="Pause_menu/Buttons"]
layout_mode = 2
size_flags_vertical = 3
text = "Return
"

[node name="Configuration" type="Button" parent="Pause_menu/Buttons"]
layout_mode = 2
size_flags_vertical = 3
text = "Configuration"

[node name="Quit" type="Button" parent="Pause_menu/Buttons"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[node name="ConfigButtons" type="VBoxContainer" parent="Pause_menu"]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.5
offset_top = -50.5
offset_right = 109.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Fullscreen_check" type="CheckBox" parent="Pause_menu/ConfigButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Full screen"

[node name="GridContainer" type="GridContainer" parent="Pause_menu/ConfigButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 15
columns = 2

[node name="ResolutionLabel" type="Label" parent="Pause_menu/ConfigButtons/GridContainer"]
layout_mode = 2
text = "Resolution:"

[node name="ResolutionOptions" type="OptionButton" parent="Pause_menu/ConfigButtons/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GridContainer2" type="GridContainer" parent="Pause_menu/ConfigButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 15
columns = 2

[node name="MusicLabel" type="Label" parent="Pause_menu/ConfigButtons/GridContainer2"]
layout_mode = 2
text = "Music:"

[node name="MusicSlider" type="HSlider" parent="Pause_menu/ConfigButtons/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.05
value = 1.0

[node name="GridContainer3" type="GridContainer" parent="Pause_menu/ConfigButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 33
columns = 2

[node name="SFXLabel" type="Label" parent="Pause_menu/ConfigButtons/GridContainer3"]
layout_mode = 2
text = "SFX:"

[node name="SFXSlider" type="HSlider" parent="Pause_menu/ConfigButtons/GridContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.05
value = 1.0

[node name="GridContainer4" type="GridContainer" parent="Pause_menu/ConfigButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 33
columns = 2

[node name="Mouse_SLabel" type="Label" parent="Pause_menu/ConfigButtons/GridContainer4"]
layout_mode = 2
text = "Mouse
Sensitivity:"

[node name="GridContainer" type="GridContainer" parent="Pause_menu/ConfigButtons/GridContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="sensitivity_count" type="Label" parent="Pause_menu/ConfigButtons/GridContainer4/GridContainer"]
layout_mode = 2
text = "0.003"
horizontal_alignment = 1

[node name="Mouse_Sensitivity_Slider" type="HSlider" parent="Pause_menu/ConfigButtons/GridContainer4/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 0.01
step = 0.001
value = 0.003

[node name="Apply" type="Button" parent="Pause_menu/ConfigButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Apply"

[node name="Debug" type="Button" parent="Pause_menu/ConfigButtons"]
layout_mode = 2
text = "Display debug"

[node name="Back" type="Button" parent="Pause_menu/ConfigButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Back"

[connection signal="pressed" from="Pause_menu/Buttons/Return" to="Pause_menu" method="_on_return_pressed"]
[connection signal="pressed" from="Pause_menu/Buttons/Configuration" to="Pause_menu" method="_on_configuration_pressed"]
[connection signal="pressed" from="Pause_menu/Buttons/Quit" to="Pause_menu" method="_on_quit_pressed"]
[connection signal="item_selected" from="Pause_menu/ConfigButtons/GridContainer/ResolutionOptions" to="Pause_menu" method="_on_resolution_options_item_selected"]
[connection signal="value_changed" from="Pause_menu/ConfigButtons/GridContainer2/MusicSlider" to="Pause_menu" method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Pause_menu/ConfigButtons/GridContainer3/SFXSlider" to="Pause_menu" method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="Pause_menu/ConfigButtons/GridContainer4/GridContainer/Mouse_Sensitivity_Slider" to="Pause_menu" method="_on_mouse_sensitivity_slider_value_changed"]
[connection signal="pressed" from="Pause_menu/ConfigButtons/Apply" to="Pause_menu" method="_on_apply_pressed"]
[connection signal="pressed" from="Pause_menu/ConfigButtons/Debug" to="Pause_menu" method="_on_debug_pressed"]
[connection signal="pressed" from="Pause_menu/ConfigButtons/Back" to="Pause_menu" method="_on_back_pressed"]
